// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrayerRequest resolver creates a new prayer 1`] = `
Object {
  "data": Object {
    "addPrayer": Object {
      "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
      "text": "Pray this works.",
    },
  },
}
`;

exports[`PrayerRequest resolver deletes a prayer 1`] = `
Object {
  "data": Object {
    "deletePrayer": Object {
      "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
      "text": "Pray this works.",
    },
  },
}
`;

exports[`PrayerRequest resolver flags a prayer request 1`] = `
Object {
  "data": Object {
    "flagPrayer": Object {
      "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
      "text": "Pray this works.",
    },
  },
}
`;

exports[`PrayerRequest resolver gets all prayers from current person 1`] = `
Object {
  "data": Object {
    "userPrayers": Array [
      Object {
        "firstName": "Isaac",
        "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
        "text": "Pray this works.",
      },
      Object {
        "firstName": "Rich",
        "id": "PrayerRequest:965b6e6d7046a885bea4e300b5c0400d",
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest resolver gets all prayers from groups 1`] = `
Object {
  "data": Object {
    "groupPrayers": Array [
      Object {
        "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
        "text": "Pray this works.",
      },
      Object {
        "id": "PrayerRequest:965b6e6d7046a885bea4e300b5c0400d",
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest resolver gets all public prayer requests 1`] = `
Object {
  "data": Object {
    "prayers": Array [
      Object {
        "campus": Object {
          "id": "Campus:be35f49307d7297989d3514be788ef2d",
          "name": "Anderson",
        },
        "flagCount": 0,
        "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
        "isAnonymous": true,
        "isSaved": true,
        "person": Object {
          "id": "Person:057b0758543270d1cb21784cac4d3f5c",
        },
        "prayerCount": 4,
        "requestor": Object {
          "firstName": "Isaac",
          "id": "Person:057b0758543270d1cb21784cac4d3f5c",
          "lastName": "Hardy",
        },
        "startTime": "2019-07-02T13:08:02.035",
        "text": "Pray this works.",
      },
      Object {
        "campus": Object {
          "id": "Campus:be35f49307d7297989d3514be788ef2d",
          "name": "Anderson",
        },
        "flagCount": 0,
        "id": "PrayerRequest:965b6e6d7046a885bea4e300b5c0400d",
        "isAnonymous": true,
        "isSaved": true,
        "person": Object {
          "id": "Person:057b0758543270d1cb21784cac4d3f5c",
        },
        "prayerCount": 4,
        "requestor": Object {
          "firstName": "Isaac",
          "id": "Person:057b0758543270d1cb21784cac4d3f5c",
          "lastName": "Hardy",
        },
        "startTime": "2019-07-03T13:08:02.035",
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest resolver gets all public prayer requests by campus 1`] = `
Object {
  "data": Object {
    "campusPrayers": Array [
      Object {
        "campus": Object {
          "id": "Campus:be35f49307d7297989d3514be788ef2d",
          "name": "Anderson",
        },
        "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
        "text": "Pray this works.",
      },
      Object {
        "campus": Object {
          "id": "Campus:be35f49307d7297989d3514be788ef2d",
          "name": "Anderson",
        },
        "id": "PrayerRequest:965b6e6d7046a885bea4e300b5c0400d",
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest resolver gets all saved prayers 1`] = `
Object {
  "data": Object {
    "savedPrayers": Array [
      Object {
        "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
        "text": "Pray this works.",
      },
      Object {
        "id": "PrayerRequest:965b6e6d7046a885bea4e300b5c0400d",
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest resolver increments prayed for a request 1`] = `
Object {
  "data": Object {
    "incrementPrayerCount": Object {
      "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
      "text": "Pray this works.",
    },
  },
}
`;

exports[`PrayerRequest resolver saves a prayer 1`] = `
Object {
  "data": Object {
    "savePrayer": Object {
      "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
      "text": "Pray this works.",
    },
  },
}
`;

exports[`PrayerRequest resolver unsaves a prayer 1`] = `
Object {
  "data": Object {
    "unSavePrayer": Object {
      "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
      "text": "Pray this works.",
    },
  },
}
`;
